--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arclight challenge</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
+      <!-- navbar -->
       <nav class="nav">
         <!-- nav logo -->
-        <div>logo</div>
+        <div class="logo">
+          <img src="./Assets/Logo.svg" alt="" />
+        </div>
 
         <!-- nav items -->
         <ul class="nav-items">
@@ -20,8 +29,18 @@
         </ul>
 
         <!-- get started button -->
-        <button type="button" class="nav-btn">Get started <span>— it’s free</span></button>
+        <button type="button" class="nav-btn bitter-bold">
+          Get started <span>— it’s free</span>
+        </button>
       </nav>
+
+      <!-- hero section -->
+      <div class="hero-section">
+        <div>
+          <h1 class="hero-title bitter-bold">Affiliate tracking software shouldn’t cost an arm and a leg.</h1>
+          <p class="hero-body">Keep track of all your affiliate marketing campaigns in once place, and analyze how well they are doing. Best part? It doesn’t cost an arm and a leg.</p>
+        </div>
+      </div>
     </header>
   </body>
 </html>
