--- a/index.html
+++ b/index.html
@@ -36,11 +36,142 @@
 
       <!-- hero section -->
       <div class="hero-section">
-        <div>
-          <h1 class="hero-title bitter-bold">Affiliate tracking software shouldn’t cost an arm and a leg.</h1>
-          <p class="hero-body">Keep track of all your affiliate marketing campaigns in once place, and analyze how well they are doing. Best part? It doesn’t cost an arm and a leg.</p>
+        <div class="hero-body">
+          <h1 class="hero-txt-title bitter-bold">
+            Affiliate tracking software shouldn’t cost an arm and a leg.
+          </h1>
+          <p class="hero-txt-body">
+            Keep track of all your affiliate marketing campaigns in once place,
+            and analyze how well they are doing. Best part? It doesn’t cost an
+            arm and a leg.
+          </p>
+          <!-- hero buttons -->
+          <div class="hero-btn-container">
+            <!-- get started button -->
+            <button type="button" class="nav-btn bitter-bold">
+              Get started <span>— it’s free</span>
+            </button>
+            <button type="button" class="hero-btn bitter-bold">
+              <img src="./Assets/Play.svg" alt="" />
+              How It Works
+            </button>
+          </div>
+
+          <!-- ratings -->
+          <div class="hero-ratings">
+            <span class="stars-container">
+              <img src="./Assets/Star.svg" alt="" />
+              <img src="./Assets/Star.svg" alt="" />
+              <img src="./Assets/Star.svg" alt="" />
+              <img src="./Assets/Star.svg" alt="" />
+              <img src="./Assets/Star.svg" alt="" />
+            </span>
+            <p>5/5 • <span class="bitter-bold">Alternative To Reviews</span></p>
+          </div>
         </div>
+
+        <!-- hero image -->
+        <img src="./Assets/Mapmap-folks.svg" alt="" class="hero-img" />
+      </div>
+
+      <div class="companies">
+        <img src="./Assets/Shopify.svg" alt="" class="company-logo-img" />
+        <img src="./Assets/Paypal.svg" alt="" class="company-logo-img" />
+        <img src="./Assets/Samsung.svg" alt="" class="company-logo-img" />
+        <img src="./Assets/Lenovo.svg" alt="" class="company-logo-img" />
+        <img src="./Assets/Google.svg" alt="" class="company-logo-img" />
+        <img src="./Assets/Slack.svg" alt="" class="company-logo-img" />
       </div>
     </header>
+
+    <main>
+      <div class="body-1">
+        <img src="./Assets/Dashboard.png" alt="" />
+        <div class="body-1-content">
+          <h3 class="bitter-bold">
+            A powerful dashboard that tracks everything.
+          </h3>
+          <p class="body-1-content-txt">
+            Decisions should be powered by data, and there’s no better way to
+            collect good data than our powerful dashboard.
+          </p>
+
+          <div class="body-1-content-list">
+            <span>
+              <img src="./Assets/Checkmark.svg" alt="" />
+              <p>Create and manage custom referral links.</p>
+            </span>
+            <span>
+              <img src="./Assets/Checkmark.svg" alt="" />
+              <p>A/B test your campaigns for more accurate results.</p>
+            </span>
+            <span>
+              <img src="./Assets/Checkmark.svg" alt="" />
+              <p>Track all your campaigns.</p>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="section">
+        <div class="body-2">
+          <div class="body">
+            <h3 class="bitter-bold">For Startups</h3>
+            <p class="body-content-txt">
+              Not all companies are big, startups should have just as much
+              opportunities as established enterprises.
+            </p>
+
+            <div class="body-content-list">
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>50% off all plans, forever.</p>
+              </span>
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>
+                  Receive monthly offers for and expert support to help you grow
+                  your referral program.
+                </p>
+              </span>
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>Access to our Founders Hub.</p>
+              </span>
+            </div>
+          </div>
+          <div class="body">
+            <h3 class="bitter-bold">For Enterprises</h3>
+            <p class="body-content-txt">
+              Just because your company is huge, doesn’t mean you shouldn’t
+              benefit from a referral system.
+            </p>
+
+            <div class="body-content-list">
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>10% off all plans, forever.</p>
+              </span>
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>
+                  Free consultation consultations with our Marketing experts.
+                </p>
+              </span>
+              <span>
+                <img src="./Assets/Checkmark.svg" alt="" />
+                <p>Access to our Enterprise Hub.</p>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <div class="pricing">
+            <div>
+                
+            </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
