project architecture change

--- a/index.html
+++ b/index.html
@@ -1,177 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Arclight challenge</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <header class="header">
-      <!-- navbar -->
-      <nav class="nav">
-        <!-- nav logo -->
-        <div class="logo">
-          <img src="./Assets/Logo.svg" alt="" />
-        </div>
-
-        <!-- nav items -->
-        <ul class="nav-items">
-          <li class="nav-item">Pricing</li>
-          <li class="nav-item">Features</li>
-          <li class="nav-item">Docs</li>
-        </ul>
-
-        <!-- get started button -->
-        <button type="button" class="nav-btn bitter-bold">
-          Get started <span>— it’s free</span>
-        </button>
-      </nav>
-
-      <!-- hero section -->
-      <div class="hero-section">
-        <div class="hero-body">
-          <h1 class="hero-txt-title bitter-bold">
-            Affiliate tracking software shouldn’t cost an arm and a leg.
-          </h1>
-          <p class="hero-txt-body">
-            Keep track of all your affiliate marketing campaigns in once place,
-            and analyze how well they are doing. Best part? It doesn’t cost an
-            arm and a leg.
-          </p>
-          <!-- hero buttons -->
-          <div class="hero-btn-container">
-            <!-- get started button -->
-            <button type="button" class="nav-btn bitter-bold">
-              Get started <span>— it’s free</span>
-            </button>
-            <button type="button" class="hero-btn bitter-bold">
-              <img src="./Assets/Play.svg" alt="" />
-              How It Works
-            </button>
-          </div>
-
-          <!-- ratings -->
-          <div class="hero-ratings">
-            <span class="stars-container">
-              <img src="./Assets/Star.svg" alt="" />
-              <img src="./Assets/Star.svg" alt="" />
-              <img src="./Assets/Star.svg" alt="" />
-              <img src="./Assets/Star.svg" alt="" />
-              <img src="./Assets/Star.svg" alt="" />
-            </span>
-            <p>5/5 • <span class="bitter-bold">Alternative To Reviews</span></p>
-          </div>
-        </div>
-
-        <!-- hero image -->
-        <img src="./Assets/Mapmap-folks.svg" alt="" class="hero-img" />
-      </div>
-
-      <div class="companies">
-        <img src="./Assets/Shopify.svg" alt="" class="company-logo-img" />
-        <img src="./Assets/Paypal.svg" alt="" class="company-logo-img" />
-        <img src="./Assets/Samsung.svg" alt="" class="company-logo-img" />
-        <img src="./Assets/Lenovo.svg" alt="" class="company-logo-img" />
-        <img src="./Assets/Google.svg" alt="" class="company-logo-img" />
-        <img src="./Assets/Slack.svg" alt="" class="company-logo-img" />
-      </div>
-    </header>
-
-    <main>
-      <div class="body-1">
-        <img src="./Assets/Dashboard.png" alt="" />
-        <div class="body-1-content">
-          <h3 class="bitter-bold">
-            A powerful dashboard that tracks everything.
-          </h3>
-          <p class="body-1-content-txt">
-            Decisions should be powered by data, and there’s no better way to
-            collect good data than our powerful dashboard.
-          </p>
-
-          <div class="body-1-content-list">
-            <span>
-              <img src="./Assets/Checkmark.svg" alt="" />
-              <p>Create and manage custom referral links.</p>
-            </span>
-            <span>
-              <img src="./Assets/Checkmark.svg" alt="" />
-              <p>A/B test your campaigns for more accurate results.</p>
-            </span>
-            <span>
-              <img src="./Assets/Checkmark.svg" alt="" />
-              <p>Track all your campaigns.</p>
-            </span>
-          </div>
-        </div>
-      </div>
-
-      <div class="section">
-        <div class="body-2">
-          <div class="body">
-            <h3 class="bitter-bold">For Startups</h3>
-            <p class="body-content-txt">
-              Not all companies are big, startups should have just as much
-              opportunities as established enterprises.
-            </p>
-
-            <div class="body-content-list">
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>50% off all plans, forever.</p>
-              </span>
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>
-                  Receive monthly offers for and expert support to help you grow
-                  your referral program.
-                </p>
-              </span>
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>Access to our Founders Hub.</p>
-              </span>
-            </div>
-          </div>
-          <div class="body">
-            <h3 class="bitter-bold">For Enterprises</h3>
-            <p class="body-content-txt">
-              Just because your company is huge, doesn’t mean you shouldn’t
-              benefit from a referral system.
-            </p>
-
-            <div class="body-content-list">
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>10% off all plans, forever.</p>
-              </span>
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>
-                  Free consultation consultations with our Marketing experts.
-                </p>
-              </span>
-              <span>
-                <img src="./Assets/Checkmark.svg" alt="" />
-                <p>Access to our Enterprise Hub.</p>
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="pricing">
-            <div>
-                
-            </div>
-        </div>
-      </div>
-    </main>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
